--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: BOS Life
-email: branden.steele@gmail.com
+email: branden.olson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts and musings from the friendly AI engineer next door.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: brandenolson
+twitter_username: DrOlsonSteele
+github_username:  BrandenOlson
 
 # Build settings
 theme: minima
